--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 </a>
             </div>
         </div>
+
         <div class="header__inner">
             <div class="inner__content">
                 <div class="inner__title">Explore and Travel</div>
@@ -45,28 +46,30 @@
 
                 <div class="inner__selectors">
                     <select class="selection-input" tabindex="1" name="location">
-                        <option value="location1">Location1</option>
+                        <option value="location1">Location</option>
                         <option value="location2">Location2</option>
                         <option value="location3">Location3</option>
                     </select>
 
                     <select class="selection-input" tabindex="2" name="activity">
-                        <option value="activity1">Activity1</option>
+                        <option value="activity1">Activity</option>
                         <option value="activity2">Activity2</option>
                         <option value="activity3">Activity3</option>
                     </select>
 
                     <select class="selection-input" tabindex="3" name="grade">
-                        <option value="grade1">Grade1</option>
+                        <option value="grade1">Grade</option>
                         <option value="grade2">Grade2</option>
                         <option value="grade3">Grade3</option>
                     </select>
 
                     <select class="selection-input" tabindex="4" name="date">
-                        <option value="date1">Date1</option>
+                        <option value="date1">Date</option>
                         <option value="date2">Date2</option>
                         <option value="date3">Date3</option>
                     </select>
+
+                    <!-- <input class="selection-input" type="date" tabindex="4" name="date"> -->
                 </div>
 
                 <a class="secondary-btn" href="#">
@@ -77,9 +80,6 @@
                 <img src="img/header-bg.jpg" alt="">
             </div>
         </div>
-
-
-
 
     </header>
 </body>
