Add 3 more sections:
Learn More
Gallery
Download

--- a/index.html
+++ b/index.html
@@ -81,6 +81,91 @@
         </div>
     </header>
 
+    <section class="learn-more container_narrow">
+        <div class="content-inner flex-container">
+            <div class="content__image_right">
+                <img src="img/section01.jpg" alt="">
+            </div>
+            <div class="content__collumn">
+                <h2 class="content__title title">
+                    A new way to explore the world
+                </h2>
+                <div class="content__text">
+                    <p>
+                        For decades travellers have reached for Lonely Planet books when looking to plan and execute
+                        their perfect trip, but now, they can also let Lonely Planet Experiences lead the way
+                    </p>
+                </div>
+                <a class="btn_secondary btn-medium buttons" href="#LearnMore">Learn more</a>
+            </div>
+        </div>
+    </section>
+
+    <section class="gallery container_narrow">
+        <div class="gallery__top flex-container">
+            <h2 class="gallery__title title">
+                Featured destinations
+            </h2>
+            <a class="view-all" href="#ViewAllGallery">View all ></a>
+        </div>
+        <div class="gallery__bottom flex-container">
+            <div class="gallery-item">
+                <img class="gallery-item__img" src="img/gallery01.jpg" alt="">
+                <div class="gallery-item__label">
+                    <div class="gallery-item__inner flex-container">
+                        <h3 class="gallery-item__title">Raja Ampat</h3>
+                        <p class="gallery-item__text">Indonesia</p>
+                    </div>
+                </div>
+            </div>
+            <div class="gallery-item">
+                <img class="gallery-item__img" src="img/gallery02.jpg" alt="">
+                <div class="gallery-item__label">
+                    <div class="gallery-item__inner flex-container">
+                        <h3 class="gallery-item__title">Fanjingshan</h3>
+                        <p class="gallery-item__text">China</p>
+                    </div>
+                </div>
+            </div>
+            <div class="gallery-item">
+                <img class="gallery-item__img" src="img/gallery03.jpg" alt="">
+                <div class="gallery-item__label">
+                    <div class="gallery-item__inner flex-container">
+                        <h3 class="gallery-item__title">Vevey</h3>
+                        <p class="gallery-item__text">Switzerland</p>
+                    </div>
+                </div>
+            </div>
+            <div class="gallery-item">
+                <img class="gallery-item__img" src="img/gallery04.jpg" alt="">
+                <div class="gallery-item__label">
+                    <div class="gallery-item__inner flex-container">
+                        <h3 class="gallery-item__title">Skadar</h3>
+                        <p class="gallery-item__text">Montenegro</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="download container_narrow">
+        <div class="content-inner flex-container">
+            <div class="content__collumn">
+                <h2 class="content__title title">
+                    Guides by Thousand Sunny
+                </h2>
+                <p class="content__text">
+                    Packed with tips and advice from our on-the-ground experts, our city guides app (iOS and Android) is
+                    the ultimate resource before and during a trip.
+                </p>
+                <a class="btn_secondary btn-medium buttons" href="#Download">Download</a>
+            </div>
+            <div class="content__image_left">
+                <img src="img/section02.jpg" alt="">
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
