Create Section Testimonials

--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
     </section>
 
     <section class="gallery container_narrow">
-        <div class="gallery__top flex-container">
-            <h2 class="gallery__title title">
+        <div class="section-top_with-link flex-container">
+            <h2 class="section-top__title title">
                 Featured destinations
             </h2>
-            <a class="view-all" href="#ViewAllGallery">View all ></a>
+            <a class="section-top_link" href="#ViewAllGallery">View all ></a>
         </div>
         <div class="gallery__bottom flex-container">
             <div class="gallery-item">
@@ -165,6 +165,46 @@
             </div>
         </div>
     </section>
+
+    <section class="testimonials container_narrow">
+        <h2 class="section-top__title title">
+            Testimonials
+        </h2>
+        <div class="content-inner flex-container">
+            <div class="content__collumn">
+                <div class="content__stars">
+                    <img class="star-img" src="img/golden-star.svg" alt="">
+                    <img class="star-img" src="img/golden-star.svg" alt="">
+                    <img class="star-img" src="img/golden-star.svg" alt="">
+                    <img class="star-img" src="img/golden-star.svg" alt="">
+                    <img class="star-img" src="img/golden-star.svg" alt="">
+                </div>
+                <div class="content__quote">
+                    “Quisque in lacus a urna fermentum euismod. Integer mi nibh, dapibus ac scelerisque eu, facilisis quis purus. Morbi blandit sit amet turpis nec”
+                </div>
+                <div class="content__user-name">
+                    Edward Newgate
+                </div>
+                <div class="content__user-position">
+                    Founder Circle
+                </div>
+            </div>
+            <div class="content__image_center">
+                <div class="slider">
+                    <img src="img/user_photo.jpg" alt="">
+                    <div class="slider__label"></div>
+                    <a class="slider__btn_next" href="#SliderNext">
+                        <img src="img/btn-next_black.svg" alt="">
+                    </a>
+                    <a class="slider__btn-prev" href="#SliderPrev">
+                        <img src="img/btn-prev_gray.svg" alt="">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
 
 </body>
 
