Create Section "Trending stories"

--- a/index.html
+++ b/index.html
@@ -106,7 +106,9 @@
             <h2 class="section-top__title title">
                 Featured destinations
             </h2>
-            <a class="section-top_link" href="#ViewAllGallery">View all ></a>
+            <a class="section-top_link link-style" href="#ViewAllGallery">
+                View all >
+            </a>
         </div>
         <div class="gallery__bottom flex-container">
             <div class="gallery-item">
@@ -167,9 +169,7 @@
     </section>
 
     <section class="testimonials container_narrow">
-        <h2 class="section-top__title title">
-            Testimonials
-        </h2>
+        <h2 class="section-top__title title">Testimonials</h2>
         <div class="content-inner flex-container">
             <div class="content__collumn">
                 <div class="content__stars">
@@ -204,6 +204,82 @@
         </div>
     </section>
 
+    <section class="stories container_narrow">
+        <div class="section-top_with-link flex-container">
+            <h2 class="section-top__title title">
+                Trending stories
+            </h2>
+            <a class="section-top_link link-style" href="#ViewAllGallery">
+                View all >
+            </a>
+        </div>
+        <div class="stories__items flex-container">
+            <div class="story-item">
+                <div class="story-item__image">
+                    <img src="img/story01.jpg" alt="">
+                </div>
+                <div class="story-item__content">
+                    <h3 class="story-item__title">
+                        The many benefits of taking a healing holiday
+                    </h3>
+                    <p class="story-item__text">
+                        ‘Helaing holidays’ are on the rise tohelp maximise your health and happines...
+                    </p>
+                    <a class="story-item__link link-style" href="#ReadStory01">
+                        Read more
+                    </a>
+                </div>
+            </div>
+            <div class="story-item">
+                <div class="story-item__image">
+                    <img src="img/story02.jpg" alt="">
+                </div>
+                <div class="story-item__content">
+                    <h3 class="story-item__title">
+                        The best Kyoto restaurant to try Japanese food
+                    </h3>
+                    <p class="story-item__text">
+                        From tofu to teahouses, here’s our guide to Kyoto’s best restaurants to visit...
+                    </p>
+                    <a class="story-item__link link-style" href="#ReadStory02">
+                        Read more
+                    </a>
+                </div>
+            </div>
+            <div class="story-item">
+                <div class="story-item__image">
+                    <img src="img/story03.jpg" alt="">
+                </div>
+                <div class="story-item__content">
+                    <h3 class="story-item__title">
+                        Skip Chichen Itza and head to this remote Yucatan
+                    </h3>
+                    <p class="story-item__text">
+                        It’s remote and challenging to get, but braving the jungle and exploring these ruins without the...
+                    </p>
+                    <a class="story-item__link link-style" href="#ReadStory03">
+                        Read more
+                    </a>
+                </div>
+            </div>
+            <div class="story-item">
+                <div class="story-item__image">
+                    <img src="img/story04.jpg" alt="">
+                </div>
+                <div class="story-item__content">
+                    <h3 class="story-item__title">
+                        Surf’s up at these beginner spots around the world
+                    </h3>
+                    <p class="story-item__text">
+                        If learning to surf has in on your to-do list for a while, the good news is: it’s never too late...
+                    </p>
+                    <a class="story-item__link link-style" href="#ReadStory04">
+                        Read more
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 </body>
