Minor update index.html

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             <h2 class="section-top__title title">
                 Trending stories
             </h2>
-            <a class="section-top_link link-style" href="#ViewAllGallery">
+            <a class="section-top_link link-style" href="#ViewAllStories">
                 View all >
             </a>
         </div>
