Change teg "div" to "nav" in header menu

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 </a>
             </div>
             <div class="row__right flex-container">
-                <div class="menu">
+                <nav class="menu">
                     <ul class="menu__list flex-container">
                         <a class="menu__link" href="#Home">
                             <li class="menu__item menu__item_active">Home</li>
@@ -32,7 +32,7 @@
                             <li class="menu__item">Partner</li>
                         </a>
                     </ul>
-                </div>
+                </nav>
                 <div class="row__buttons flex-container">
                     <a class="btn_primary btn-small buttons" href="#Login">Login</a>
                     <a class="btn_secondary btn-small row__buttons buttons" href="#Register">Register</a>
