--- a/index.html
+++ b/index.html
@@ -180,7 +180,8 @@
                     <img class="star-img" src="img/golden-star.svg" alt="">
                 </div>
                 <div class="content__quote">
-                    “Quisque in lacus a urna fermentum euismod. Integer mi nibh, dapibus ac scelerisque eu, facilisis quis purus. Morbi blandit sit amet turpis nec”
+                    “Quisque in lacus a urna fermentum euismod. Integer mi nibh, dapibus ac scelerisque eu, facilisis
+                    quis purus. Morbi blandit sit amet turpis nec”
                 </div>
                 <div class="content__user-name">
                     Edward Newgate
@@ -255,7 +256,8 @@
                         Skip Chichen Itza and head to this remote Yucatan
                     </h3>
                     <p class="story-item__text">
-                        It’s remote and challenging to get, but braving the jungle and exploring these ruins without the...
+                        It’s remote and challenging to get, but braving the jungle and exploring these ruins without
+                        the...
                     </p>
                     <a class="story-item__link link-style" href="#ReadStory03">
                         Read more
@@ -271,7 +273,8 @@
                         Surf’s up at these beginner spots around the world
                     </h3>
                     <p class="story-item__text">
-                        If learning to surf has in on your to-do list for a while, the good news is: it’s never too late...
+                        If learning to surf has in on your to-do list for a while, the good news is: it’s never too
+                        late...
                     </p>
                     <a class="story-item__link link-style" href="#ReadStory04">
                         Read more
@@ -281,6 +284,70 @@
         </div>
     </section>
 
+    <footer class="footer">
+        <div class="container_wide">
+            <div class="footer__content flex-container">
+                <div class="footer__collumn flex-container">
+                    <div class="footer__collumn_top">
+                        <a class="logo__link" href="#Logo">
+                            <img class="logo__img_big" src="img/logo-big.svg" alt="Logo">
+                        </a>
+                        <p class="footer__text footer__text_top">
+                            Plan and book your perfect trip with expert advice, travel tips destination information from us
+                        </p>
+                    </div>
+                    <div class="footer__collumn_bottom">
+                        <p class="footer__text footer__text_bottom">
+                            ©2020 Thousand Sunny. All rights reserved
+                        </p>
+                    </div>
+                </div>
+                <div class="footer__items flex-container">
+                    <div class="footer__item">
+                        <h3 class="footer-item__header">Destinations</h3>
+                        <a class="footer-item__link" href="#Africa">Africa</a>
+                        <a class="footer-item__link" href="#Antarctica">Antarctica</a>
+                        <a class="footer-item__link" href="#Asia">Asia</a>
+                        <a class="footer-item__link" href="#Europe">Europe</a>
+                        <a class="footer-item__link" href="#America">America</a>
+                    </div>
+                    <div class="footer__item">
+                        <h3 class="footer-item__header">Shop</h3>
+                        <a class="footer-item__link" href="#DestinationGuides">Destination Guides</a>
+                        <a class="footer-item__link" href="#PictorialAndGifts">Pictorial & Gifts</a>
+                        <a class="footer-item__link" href="#SpecialOffers">Special Offers</a>
+                        <a class="footer-item__link" href="#DeliveryTimes">Delivery Times</a>
+                        <a class="footer-item__link" href="#FAQs">FAQs</a>
+                    </div>
+                    <div class="footer__item">
+                        <h3 class="footer-item__header">Interests</h3>
+                        <a class="footer-item__link" href="#AdventureTravel">Adventure Travel</a>
+                        <a class="footer-item__link" href="#ArtAndCulture">Art And Culture</a>
+                        <a class="footer-item__link" href="#WildlifeAndNature">Wildlife And Nature</a>
+                        <a class="footer-item__link" href="#FamilyHolidays">Family Holidays</a>
+                        <a class="footer-item__link" href="#FoodAndDrink">Food And Drink</a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer__social flex-container">
+                <a class="social__link" href="#twitter">
+                    <img src="img/icons/01icon-twitter.svg" alt="">
+                </a>
+                <a class="social__link" href="#facebook">
+                    <img src="img/icons/02icon-facebook.svg" alt="">
+                </a>
+                <a class="social__link" href="#instagram">
+                    <img src="img/icons/03icon-instagram.svg" alt="">
+                </a>
+                <a class="social__link" href="#linkedin">
+                    <img src="img/icons/04icon-linkedin.svg" alt="">
+                </a>
+                <a class="social__link" href="#youtube">
+                    <img src="img/icons/05icon-youtube.svg" alt="">
+                </a>
+            </div>
+        </div>
+    </footer>
 
 </body>
 
