Change link arrows from letter to icon
Links "View all >" texts change to "View all"  + arrow icon

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 Featured destinations
             </h2>
             <a class="section-top_link link-style" href="#ViewAllGallery">
-                View all >
+                View all
             </a>
         </div>
         <div class="gallery__bottom flex-container">
@@ -211,7 +211,7 @@
                 Trending stories
             </h2>
             <a class="section-top_link link-style" href="#ViewAllStories">
-                View all >
+                View all
             </a>
         </div>
         <div class="stories__items flex-container">
