Put darker cover on unpointed items in gallery

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
         <div class="gallery__bottom flex-container">
             <div class="gallery-item">
                 <img class="gallery-item__img" src="img/gallery01.jpg" alt="">
+                <div class="gallery-item__cover"></div>
                 <div class="gallery-item__label">
                     <div class="gallery-item__inner flex-container">
                         <h3 class="gallery-item__title">Raja Ampat</h3>
@@ -122,6 +123,7 @@
             </div>
             <div class="gallery-item">
                 <img class="gallery-item__img" src="img/gallery02.jpg" alt="">
+                <div class="gallery-item__cover"></div>
                 <div class="gallery-item__label">
                     <div class="gallery-item__inner flex-container">
                         <h3 class="gallery-item__title">Fanjingshan</h3>
@@ -131,6 +133,7 @@
             </div>
             <div class="gallery-item">
                 <img class="gallery-item__img" src="img/gallery03.jpg" alt="">
+                <div class="gallery-item__cover"></div>
                 <div class="gallery-item__label">
                     <div class="gallery-item__inner flex-container">
                         <h3 class="gallery-item__title">Vevey</h3>
@@ -140,6 +143,7 @@
             </div>
             <div class="gallery-item">
                 <img class="gallery-item__img" src="img/gallery04.jpg" alt="">
+                <div class="gallery-item__cover"></div>
                 <div class="gallery-item__label">
                     <div class="gallery-item__inner flex-container">
                         <h3 class="gallery-item__title">Skadar</h3>
