Update "Prev" and "Next" buttons for slider in Testimonials section
Make images as background.
Enables to switch button images by changing it's class

--- a/index.html
+++ b/index.html
@@ -198,12 +198,8 @@
                 <div class="slider">
                     <img src="img/user_photo.jpg" alt="">
                     <div class="slider__label"></div>
-                    <a class="slider__btn_next" href="#SliderNext">
-                        <img src="img/btn-next_black.svg" alt="">
-                    </a>
-                    <a class="slider__btn-prev" href="#SliderPrev">
-                        <img src="img/btn-prev_gray.svg" alt="">
-                    </a>
+                    <a class="slider__btn-prev_disabled" href="#SliderPrev"></a>
+                    <a class="slider__btn-next_enabled" href="#SliderNext"></a>
                 </div>
             </div>
         </div>
