Update Social Icons in Footer bottom
All icons now aligned to bottom line;
Move icon pictures URLs from html to css;
Adjust pading between social icons;
Adjust padding for Fotter bottom part.

--- a/index.html
+++ b/index.html
@@ -330,21 +330,11 @@
                 </div>
             </div>
             <div class="footer__social flex-container">
-                <a class="social__link" href="#twitter">
-                    <img src="img/icons/01icon-twitter.svg" alt="">
-                </a>
-                <a class="social__link" href="#facebook">
-                    <img src="img/icons/02icon-facebook.svg" alt="">
-                </a>
-                <a class="social__link" href="#instagram">
-                    <img src="img/icons/03icon-instagram.svg" alt="">
-                </a>
-                <a class="social__link" href="#linkedin">
-                    <img src="img/icons/04icon-linkedin.svg" alt="">
-                </a>
-                <a class="social__link" href="#youtube">
-                    <img src="img/icons/05icon-youtube.svg" alt="">
-                </a>
+                <a class="social__link social__twitter" href="#twitter"></a>
+                <a class="social__link social__facebook" href="#facebook"></a>
+                <a class="social__link social__instagram" href="#instagram"></a>
+                <a class="social__link social__linkedin" href="#linkedin"></a>
+                <a class="social__link social__youtube" href="#youtube"></a>
             </div>
         </div>
     </footer>
