--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <h2 class="content__title title">
                     A new way to explore the world
                 </h2>
-                <div class="content__text">
+                <div class="content__text text">
                     <p>
                         For decades travellers have reached for Lonely Planet books when looking to plan and execute
                         their perfect trip, but now, they can also let Lonely Planet Experiences lead the way
@@ -160,7 +160,7 @@
                 <h2 class="content__title title">
                     Guides by Thousand Sunny
                 </h2>
-                <p class="content__text">
+                <p class="content__text text">
                     Packed with tips and advice from our on-the-ground experts, our city guides app (iOS and Android) is
                     the ultimate resource before and during a trip.
                 </p>
